src/test/ui/parser/keyword-pub-as-identifier.stderr
error: expected pattern, found keyword `pub`
  --> $DIR/keyword-pub-as-identifier.rs:4:9
   |
LL |     let pub = "foo"; //~ error: expected pattern, found keyword `pub`
   |         ^^^ expected pattern

error: aborting due to previous error

