src/test/ui/parser/keyword-pub-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py pub'

fn main() {
    let pub = "foo"; //~ error: expected pattern, found keyword `pub`
}
